--- a/src/main/resources/view/student_Manage.fxml
+++ b/src/main/resources/view/student_Manage.fxml
@@ -116,7 +116,7 @@
         </HBox>
 
         <!-- Payment Table -->
-        <TableView fx:id="tblPayments" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblStudent" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="colStudentId" prefWidth="100" text="Student ID" />
                 <TableColumn fx:id="colName" prefWidth="140" text="Name" />
