Student save ok

--- a/src/main/resources/view/student_Manage.fxml
+++ b/src/main/resources/view/student_Manage.fxml
@@ -94,7 +94,7 @@
             <!-- Right Image -->
             <ImageView fitHeight="179.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
                 <image>
-                    <Image url="@../../../../../../../../../Pictures/Screenshots/payment.png" />
+<!--                    <Image url="@../../../../../../../../" />-->
                 </image>
             </ImageView>
         </HBox>
