--- a/src/main/resources/view/instructor_Manage.fxml
+++ b/src/main/resources/view/instructor_Manage.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,126 +15,112 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="642.0" prefWidth="950" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.InstructorContrpller">
-
-    <VBox layoutX="16.8" layoutY="15.2" prefHeight="570.0" prefWidth="919.0" spacing="15" style="-fx-background-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="15.0">
+<AnchorPane prefHeight="662.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.InstructorContrpller">
+    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
         <!-- Header -->
-        <Label alignment="CENTER" prefHeight="62.0" prefWidth="919.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #eff4fe;                       -fx-background-color: #333c7c; -fx-background-radius: 15;" text="Instructor Management">
-            <font>
-                <Font name="Lucida Sans Unicode" size="12.0" />
-            </font>
+        <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Instructor Management">
+            <font><Font name="System Bold" size="24.0" /></font>
+            <tooltip><Tooltip text="Instructor Management Dashboard" /></tooltip>
         </Label>
 
-        <Separator prefHeight="22.0" prefWidth="919.0" style="-fx-background-color: #333c7c;" />
+        <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
         <!-- Input Form -->
-        <HBox alignment="CENTER_RIGHT" prefHeight="218.0" prefWidth="919.0" spacing="20">
-
-            <GridPane alignment="CENTER_RIGHT" hgap="15" prefHeight="268.0" prefWidth="542.0" style="-fx-padding: 10;" vgap="15">
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Instructor.css">
+            <GridPane alignment="CENTER" hgap="15" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
                 </rowConstraints>
 
-                <Label text="Name :" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                <!-- Name -->
+                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtName" promptText="Enter Full Name" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <tooltip><Tooltip text="Instructor's full name" /></tooltip>
+                </TextField>
 
-                <Label text="Phone :" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                <!-- Phone -->
+                <Label text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtPhone" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtPhone" promptText="Enter Phone Number" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <tooltip><Tooltip text="Instructor's contact number" /></tooltip>
+                </TextField>
 
-                <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                <!-- Email -->
+                <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="2">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtEmail" promptText="Enter Email" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <tooltip><Tooltip text="Instructor's email address" /></tooltip>
+                </TextField>
 
-                <Label text="Instructor ID :" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                <!-- Instructor ID -->
+                <Label text="Instructor ID:" GridPane.columnIndex="0" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtInstructorId" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtInstructorId" promptText="Enter Instructor ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <tooltip><Tooltip text="Unique ID for the instructor" /></tooltip>
+                </TextField>
 
-                <Label text="Availability :" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                <!-- Availability -->
+                <Label text="Availability:" GridPane.columnIndex="0" GridPane.rowIndex="4">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtAvailability" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-
+                <TextField fx:id="txtAvailability" promptText="Enter Availability" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                    <tooltip><Tooltip text="Instructor's availability status" /></tooltip>
+                </TextField>
             </GridPane>
 
-            <ImageView fitHeight="179.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@../../../../../../../../../Pictures/Screenshots/payment.png" />
-                </image>
-            </ImageView>
+            <!-- Right Side Placeholder -->
+            <VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
+                <Label style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #3b4cca;" text="Instructor Profile" />
+                <Label style="-fx-text-fill: #6b7280;" text="No Image Available" />
+            </VBox>
         </HBox>
 
         <!-- Action Buttons -->
-        <HBox alignment="CENTER" prefHeight="61.0" prefWidth="919.0" spacing="15">
-            <Button fx:id="btnAdd" onAction="#handleAddPayment" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Save">
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
+            <Button fx:id="btnAdd" onAction="#handleAddPayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="26.0" fitWidth="30.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=O5q3KoA7NnF9amp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Save instructor details" /></tooltip>
             </Button>
-            <Button onAction="#handleClear" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Clear">
+            <Button onAction="#handleClear" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Clear">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="30.0" fitWidth="32.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=MVQ6DwlJgTPlamp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Clear all fields" /></tooltip>
             </Button>
-            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Update">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=11680amp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Update selected instructor" /></tooltip>
             </Button>
-            <Button onAction="#handleDeletePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Delete">
+            <Button onAction="#handleDeletePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Delete">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="33.0" fitWidth="30.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=G01ACMKXfdpJamp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Delete selected instructor" /></tooltip>
             </Button>
         </HBox>
 
         <!-- Table -->
-        <TableView fx:id="tblPayments" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblPayments" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colName" prefWidth="180" text="Name" />
-                <TableColumn fx:id="colPhone" prefWidth="140" text="Phone" />
-                <TableColumn fx:id="colEmail" prefWidth="180" text="Email" />
-                <TableColumn fx:id="colInstructorId" prefWidth="120" text="Instructor ID" />
-                <TableColumn fx:id="colAvailability" prefWidth="120" text="Availability" />
+                <TableColumn fx:id="colName" minWidth="180" prefWidth="180" text="Name" />
+                <TableColumn fx:id="colPhone" minWidth="140" prefWidth="140" text="Phone" />
+                <TableColumn fx:id="colEmail" minWidth="180" prefWidth="180" text="Email" />
+                <TableColumn fx:id="colInstructorId" minWidth="120" prefWidth="120" text="Instructor ID" />
+                <TableColumn fx:id="colAvailability" minWidth="120" prefWidth="120" text="Availability" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
-
     </VBox>
 </AnchorPane>
