--- a/src/main/resources/view/lesson_Manage.fxml
+++ b/src/main/resources/view/lesson_Manage.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,140 +15,132 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="646.0" prefWidth="950" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.LessonController">
-
-    <VBox layoutX="16.8" layoutY="15.2" prefHeight="570.0" prefWidth="919.0" spacing="15" style="-fx-background-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="15.0">
+<AnchorPane prefHeight="699.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.LessonController">
+    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
         <!-- Header -->
-        <Label alignment="CENTER" prefHeight="62.0" prefWidth="919.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #eff4fe;                       -fx-background-color: #333c7c; -fx-background-radius: 15;" text="Lesson Management">
-            <font>
-                <Font name="Lucida Sans Unicode" size="12.0" />
-            </font>
+        <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Lesson Management">
+            <font><Font name="System Bold" size="24.0" /></font>
+            <tooltip><Tooltip text="Lesson Management Dashboard" /></tooltip>
         </Label>
 
-        <Separator prefHeight="22.0" prefWidth="919.0" style="-fx-background-color: #333c7c;" />
+        <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
         <!-- Input Form -->
-        <HBox alignment="CENTER_RIGHT" prefHeight="218.0" prefWidth="919.0" spacing="20">
-
-            <GridPane alignment="CENTER_RIGHT" hgap="15" prefHeight="268.0" prefWidth="542.0" style="-fx-padding: 10;" vgap="15">
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
+            <GridPane alignment="CENTER" hgap="15" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
                 </rowConstraints>
 
-                <Label text="Lesson ID :" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                <!-- Lesson ID -->
+                <Label text="Lesson ID:" GridPane.columnIndex="0" GridPane.rowIndex="0">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtLessonId" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtLessonId" promptText="Enter Lesson ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <tooltip><Tooltip text="Unique ID for the lesson" /></tooltip>
+                </TextField>
 
-                <Label text="Date :" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                <!-- Date -->
+                <Label text="Date:" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtDate" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtDate" promptText="Enter Date" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <tooltip><Tooltip text="Lesson date" /></tooltip>
+                </TextField>
 
-                <Label text="Time :" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                <!-- Time -->
+                <Label text="Time:" GridPane.columnIndex="0" GridPane.rowIndex="2">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtTime" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtTime" promptText="Enter Time" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <tooltip><Tooltip text="Lesson time" /></tooltip>
+                </TextField>
 
-                <Label text="Status :" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                <!-- Status -->
+                <Label text="Status:" GridPane.columnIndex="0" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtStatus" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtStatus" promptText="Enter Status" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <tooltip><Tooltip text="Lesson status" /></tooltip>
+                </TextField>
 
-                <Label text="Student ID :" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                <!-- Student ID -->
+                <Label text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="4">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtStudentId" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="txtStudentId" promptText="Enter Student ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                    <tooltip><Tooltip text="Associated student ID" /></tooltip>
+                </TextField>
 
-                <Label text="Course ID :" GridPane.columnIndex="0" GridPane.rowIndex="5">
+                <!-- Course ID -->
+                <Label text="Course ID:" GridPane.columnIndex="0" GridPane.rowIndex="5">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtCourseId" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="txtCourseId" promptText="Enter Course ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <tooltip><Tooltip text="Associated course ID" /></tooltip>
+                </TextField>
 
-                <Label text="Instructor ID :" GridPane.columnIndex="0" GridPane.rowIndex="6">
+                <!-- Instructor ID -->
+                <Label text="Instructor ID:" GridPane.columnIndex="0" GridPane.rowIndex="6">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtInstructorId" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <TextField fx:id="txtInstructorId" promptText="Enter Instructor ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                    <tooltip><Tooltip text="Associated instructor ID" /></tooltip>
+                </TextField>
             </GridPane>
 
-            <!-- Right Side Image -->
-            <ImageView fitHeight="179.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@../../../../../../../../../Pictures/Screenshots/payment.png" />
-                </image>
-            </ImageView>
+            <!-- Right Side Placeholder -->
+            <VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
+                <Label style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #3b4cca;" text="Lesson Profile" />
+                <Label style="-fx-text-fill: #6b7280;" text="No Image Available" />
+            </VBox>
         </HBox>
 
         <!-- Action Buttons -->
-        <HBox alignment="CENTER" prefHeight="61.0" prefWidth="919.0" spacing="15">
-            <Button fx:id="btnAdd" onAction="#handleAddPayment" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Save">
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
+            <Button fx:id="btnAdd" onAction="#handleAddPayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="26.0" fitWidth="30.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=O5q3KoA7NnF9amp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Save lesson details" /></tooltip>
             </Button>
-            <Button onAction="#handleClear" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Clear">
+            <Button onAction="#handleClear" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Clear">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="30.0" fitWidth="32.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=MVQ6DwlJgTPlamp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Clear all fields" /></tooltip>
             </Button>
-            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Update">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=11680amp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Update selected lesson" /></tooltip>
             </Button>
-            <Button onAction="#handleDeletePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Delete">
+            <Button onAction="#handleDeletePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Delete">
                 <font><Font size="14.0" /></font>
-                <graphic>
-                    <ImageView fitHeight="33.0" fitWidth="30.0" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100amp;id=G01ACMKXfdpJamp;format=pngamp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+                <tooltip><Tooltip text="Delete selected lesson" /></tooltip>
             </Button>
         </HBox>
 
         <!-- Table -->
-        <TableView fx:id="tblPayments" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblPayments" prefHeight="141.0" prefWidth="870.0" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colLessonId" prefWidth="120" text="Lesson ID" />
-                <TableColumn fx:id="colDate" prefWidth="140" text="Date" />
-                <TableColumn fx:id="colTime" prefWidth="120" text="Time" />
-                <TableColumn fx:id="colStatus" prefWidth="120" text="Status" />
-                <TableColumn fx:id="colStudentId" prefWidth="140" text="Student ID" />
-                <TableColumn fx:id="colCourseId" prefWidth="140" text="Course ID" />
-                <TableColumn fx:id="colInstructorId" prefWidth="140" text="Instructor ID" />
+                <TableColumn fx:id="colLessonId" minWidth="120" prefWidth="120" text="Lesson ID" />
+                <TableColumn fx:id="colDate" minWidth="140" prefWidth="140" text="Date" />
+                <TableColumn fx:id="colTime" minWidth="120" prefWidth="120" text="Time" />
+                <TableColumn fx:id="colStatus" minWidth="120" prefWidth="120" text="Status" />
+                <TableColumn fx:id="colStudentId" minWidth="140" prefWidth="140" text="Student ID" />
+                <TableColumn fx:id="colCourseId" minWidth="140" prefWidth="140" text="Course ID" />
+                <TableColumn fx:id="colInstructorId" minWidth="140" prefWidth="140" text="Instructor ID" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
-
     </VBox>
 </AnchorPane>
