--- a/src/main/resources/view/payment_Manage.fxml
+++ b/src/main/resources/view/payment_Manage.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,159 +17,122 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600" prefWidth="950" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.PaymentController">
+<AnchorPane prefHeight="756.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.StudentPageController">
+    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
-    <VBox layoutX="16.8" layoutY="15.2" prefHeight="570.0" prefWidth="919.0" spacing="15" style="-fx-background-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="15.0">
-
-        <!-- Header Label -->
-        <Label alignment="CENTER" prefHeight="62.0" prefWidth="919.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #eff4fe; -fx-background-color: #333c7c; -fx-background-radius: 15;" text="Payment Management">
-            <font>
-                <Font name="Lucida Sans Unicode" size="12.0" />
-            </font>
+        <!-- Title -->
+        <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Payment Management System">
+            <font><Font name="System Bold" size="24.0" /></font>
+            <tooltip><Tooltip text="Student Management Dashboard" /></tooltip>
         </Label>
 
-        <Separator prefHeight="22.0" prefWidth="919.0" style="-fx-background-color: #333c7c;" />
+        <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
-        <!-- Input Fields + Image -->
-        <HBox fx:id="inputHBox" alignment="CENTER_RIGHT" prefHeight="218.0" prefWidth="919.0" spacing="20" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
-
-            <GridPane alignment="CENTER_RIGHT" hgap="15" prefHeight="268.0" prefWidth="542.0" style="-fx-padding: 10;" vgap="15">
+        <!-- Form and Image Section -->
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
+            <GridPane alignment="CENTER" hgap="15" prefHeight="395.0" prefWidth="472.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
-                    <RowConstraints />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
                 </rowConstraints>
 
-                <Label text="Payment ID :" GridPane.columnIndex="0" GridPane.rowIndex="0">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Student ID -->
+                <Label text="Payment ID" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtPaymentId" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtPaymentId" promptText="Enter Payment Id" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <tooltip><Tooltip text="Unique ID for the student" /></tooltip>
+                </TextField>
 
-                <Label text="Student ID :" GridPane.columnIndex="0" GridPane.rowIndex="1">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Name -->
+                <Label text="Student ID" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtStudentId" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtStudentId" promptText="Enter Student Id" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <tooltip><Tooltip text="Student's full name" /></tooltip>
+                </TextField>
 
-                <Label text="Course ID :" GridPane.columnIndex="0" GridPane.rowIndex="2">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Email -->
+                <Label text="Course ID" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtCourseId" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtCourseId" promptText="Enter Course Id" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <tooltip><Tooltip text="Student's email address" /></tooltip>
+                </TextField>
 
-                <Label text="Date :" GridPane.columnIndex="0" GridPane.rowIndex="3">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Phone -->
+                <Label text="Amount" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtAmount" promptText="amount" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <tooltip><Tooltip text="Student's contact number" /></tooltip>
+                </TextField>
 
-                <Label text="Amount :" GridPane.columnIndex="0" GridPane.rowIndex="4">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Address -->
+                <Label text="Payment Method" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtAmount" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label text="Method :" GridPane.columnIndex="0" GridPane.rowIndex="5">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
+                <!-- Registration Date -->
+                <Label text="Payment Date" GridPane.columnIndex="0" GridPane.rowIndex="5">
+                    <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtMethod" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-
+                <DatePicker fx:id="dpPaymentDate" prefHeight="53.0" prefWidth="306.0" promptText="Select Date" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <tooltip><Tooltip text="Date of registration" /></tooltip>
+                </DatePicker>
+            <ComboBox fx:id="cbMethod" prefHeight="26.0" prefWidth="294.0" promptText="Select Your Payment Method" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             </GridPane>
 
-            <!-- Image Placeholder -->
-            <ImageView fitHeight="179.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@../../../../../../../../../Pictures/Screenshots/payment_placeholder.png" />
-                </image>
-            </ImageView>
-
+            <!-- Placeholder for Image or Additional Content -->
+            <VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
+                <Label style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #3b4cca;" text="Student Profile" />
+                <!-- Removed ImageView; can add dynamic content or placeholder -->
+                <Label style="-fx-text-fill: #6b7280;" text="No Image Available" />
+            </VBox>
         </HBox>
 
         <!-- Buttons -->
-        <HBox alignment="CENTER" prefHeight="61.0" prefWidth="919.0" spacing="15">
-            <Button fx:id="btnAdd" onAction="#handleAddPayment" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Save">
-                <font>
-                    <Font size="14.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="26.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100&amp;id=O5q3KoA7NnF9&amp;format=png&amp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
+            <Button fx:id="btnSave" onAction="#handleSavePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
+                <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Save student details" /></tooltip>
             </Button>
-
-            <Button onAction="#handleClear" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Clear">
-                <font>
-                    <Font size="14.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="30.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100&amp;id=MVQ6DwlJgTPl&amp;format=png&amp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+            <Button fx:id="btnClear" onAction="#handleClear" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Clear">
+                <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Clear all fields" /></tooltip>
             </Button>
-
-            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Update">
-                <font>
-                    <Font size="14.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100&amp;id=11680&amp;format=png&amp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Update">
+                <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Update selected student" /></tooltip>
             </Button>
-
-            <Button onAction="#handleDeletePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Delete">
-                <font>
-                    <Font size="14.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="33.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="https://img.icons8.com/?size=100&amp;id=G01ACMKXfdpJ&amp;format=png&amp;color=FFFFFF" />
-                        </image>
-                    </ImageView>
-                </graphic>
+            <Button fx:id="btnDelete" onAction="#handleDeletePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Delete">
+                <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Delete selected student" /></tooltip>
             </Button>
         </HBox>
 
-        <!-- Table -->
-        <TableView fx:id="tblPayments" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+        <!-- Payment Table -->
+        <TableView fx:id="tblStudent" onMouseClicked="#tableClickOnAction" prefHeight="178.0" prefWidth="870.0" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colPaymentId" prefWidth="120" text="Payment ID" />
-                <TableColumn fx:id="colStudentId" prefWidth="120" text="Student ID" />
-                <TableColumn fx:id="colCourseId" prefWidth="120" text="Course ID" />
-                <TableColumn fx:id="colDate" prefWidth="140" text="Date" />
-                <TableColumn fx:id="colAmount" prefWidth="120" text="Amount" />
-                <TableColumn fx:id="colMethod" prefWidth="140" text="Method" />
+                <TableColumn fx:id="clmPaymentId" minWidth="100" prefWidth="100" text="Payment ID" />
+                <TableColumn fx:id="clmStudentId" minWidth="140" prefWidth="140" text="Student ID" />
+                <TableColumn fx:id="clmCourseId" minWidth="160" prefWidth="160" text="Course ID" />
+                <TableColumn fx:id="clmAmount" minWidth="120" prefWidth="120" text="Amount" />
+                <TableColumn fx:id="clmPaymenMethodtId" minWidth="160" prefWidth="160" text="Payment Method" />
+                <TableColumn fx:id="clmPDate" minWidth="120" prefWidth="260.0" text="Payment Date" />
+                <TableColumn fx:id="colRegDate" minWidth="0.0" prefWidth="0.0" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
-
     </VBox>
-
 </AnchorPane>
