--- a/src/main/resources/view/student_Manage.fxml
+++ b/src/main/resources/view/student_Manage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,119 +16,133 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600" prefWidth="950" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.StudentPageController">
-
-    <VBox layoutX="16.8" layoutY="15.2" prefHeight="570.0" prefWidth="919.0" spacing="15" style="-fx-background-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="15.0">
+<AnchorPane prefHeight="600.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.StudentPageController">
+    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
         <!-- Title -->
-        <Label alignment="CENTER" prefHeight="62.0" prefWidth="919.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #eff4fe; -fx-background-color: #333c7c; -fx-background-radius: 15;" text="Student Management">
-            <font>
-                <Font name="Lucida Sans Unicode" size="12.0" />
-            </font>
+        <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Student Management System">
+            <font><Font name="System Bold" size="24.0" /></font>
+            <tooltip><Tooltip text="Student Management Dashboard" /></tooltip>
         </Label>
 
-        <Separator prefHeight="22.0" prefWidth="919.0" style="-fx-background-color: #333c7c;" />
+        <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
-        <!-- Form and Image -->
-        <HBox alignment="CENTER_RIGHT" prefHeight="218.0" prefWidth="919.0" spacing="20">
-
-            <GridPane alignment="CENTER_RIGHT" hgap="15" prefHeight="268.0" prefWidth="542.0" style="-fx-padding: 10;" vgap="15">
+        <!-- Form and Image Section -->
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Student.css">
+            <GridPane alignment="CENTER" hgap="15" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                </rowConstraints>
 
                 <!-- Student ID -->
-                <Label text="Student ID :" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                <Label text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="0">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtStudentId" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtStudentId" promptText="Enter Student ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <tooltip><Tooltip text="Unique ID for the student" /></tooltip>
+                </TextField>
 
                 <!-- Name -->
-                <Label text="Name :" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtName" promptText="Enter Full Name" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <tooltip><Tooltip text="Student's full name" /></tooltip>
+                </TextField>
 
                 <!-- Email -->
-                <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="2">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtEmail" promptText="Enter Email" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <tooltip><Tooltip text="Student's email address" /></tooltip>
+                </TextField>
 
                 <!-- Phone -->
-                <Label text="Phone :" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                <Label text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtPhone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtPhone" promptText="Enter Phone Number" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <tooltip><Tooltip text="Student's contact number" /></tooltip>
+                </TextField>
 
                 <!-- Address -->
-                <Label text="Address :" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                <Label text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="4">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtAddress" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="txtAddress" promptText="Enter Address" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                    <tooltip><Tooltip text="Student's address" /></tooltip>
+                </TextField>
 
                 <!-- Register Fee -->
-                <Label text="Register Fee :" GridPane.columnIndex="0" GridPane.rowIndex="5">
+                <Label text="Register Fee:" GridPane.columnIndex="0" GridPane.rowIndex="5">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtRegisterFee" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="txtRegisterFee" promptText="Enter Fee" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <tooltip><Tooltip text="Registration fee amount" /></tooltip>
+                </TextField>
 
                 <!-- Registration Date -->
-                <Label text="Registration Date :" GridPane.columnIndex="0" GridPane.rowIndex="6">
+                <Label text="Registration Date:" GridPane.columnIndex="0" GridPane.rowIndex="6">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <DatePicker fx:id="dpRegistrationDate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                <DatePicker fx:id="dpRegistrationDate" promptText="Select Date" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                    <tooltip><Tooltip text="Date of registration" /></tooltip>
+                </DatePicker>
             </GridPane>
 
-            <!-- Right Image -->
-            <ImageView fitHeight="179.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-<!--                    <Image url="@../../../../../../../../" />-->
-                </image>
-            </ImageView>
+            <!-- Placeholder for Image or Additional Content -->
+            <VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
+                <Label style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #3b4cca;" text="Student Profile" />
+                <!-- Removed ImageView; can add dynamic content or placeholder -->
+                <Label style="-fx-text-fill: #6b7280;" text="No Image Available" />
+            </VBox>
         </HBox>
 
         <!-- Buttons -->
-        <HBox alignment="CENTER" prefHeight="61.0" prefWidth="919.0" spacing="15">
-            <Button fx:id="btnSave" onAction="#handleSavePayment" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Save">
+        <HBox alignment="CENTER" maxWidth="Infinity" spacing="20">
+            <Button fx:id="btnSave" onAction="#handleSavePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Save">
                 <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Save student details" /></tooltip>
             </Button>
-            <Button fx:id="btnClear" onAction="#handleClear" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Clear">
+            <Button fx:id="btnClear" onAction="#handleClear" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Clear">
                 <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Clear all fields" /></tooltip>
             </Button>
-            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#handleUpdatePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Update">
                 <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Update selected student" /></tooltip>
             </Button>
-            <Button fx:id="btnDelete" onAction="#handleDeletePayment" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #333c7c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 15;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#handleDeletePayment" style="-fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 10 20; -fx-cursor: hand;" text="Delete">
                 <font><Font size="14.0" /></font>
+                <tooltip><Tooltip text="Delete selected student" /></tooltip>
             </Button>
         </HBox>
 
         <!-- Payment Table -->
-        <TableView fx:id="tblStudent" onMouseClicked="#tableClickOnAction" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblStudent" onMouseClicked="#tableClickOnAction" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colStudentId" prefWidth="100" text="Student ID" />
-                <TableColumn fx:id="colName" prefWidth="140" text="Name" />
-                <TableColumn fx:id="colEmail" prefWidth="160" text="Email" />
-                <TableColumn fx:id="colPhone" prefWidth="120" text="Phone" />
-                <TableColumn fx:id="colAddress" prefWidth="160" text="Address" />
-                <TableColumn fx:id="colRegisterFee" prefWidth="120" text="Register Fee" />
-                <TableColumn fx:id="colRegDate" prefWidth="140" text="Registration Date" />
+                <TableColumn fx:id="colStudentId" minWidth="100" prefWidth="100" text="Student ID" />
+                <TableColumn fx:id="colName" minWidth="140" prefWidth="140" text="Name" />
+                <TableColumn fx:id="colEmail" minWidth="160" prefWidth="160" text="Email" />
+                <TableColumn fx:id="colPhone" minWidth="120" prefWidth="120" text="Phone" />
+                <TableColumn fx:id="colAddress" minWidth="160" prefWidth="160" text="Address" />
+                <TableColumn fx:id="colRegisterFee" minWidth="120" prefWidth="120" text="Register Fee" />
+                <TableColumn fx:id="colRegDate" minWidth="140" prefWidth="140" text="Registration Date" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
-
     </VBox>
 </AnchorPane>
