--- a/src/main/resources/view/instructor_Manage.fxml
+++ b/src/main/resources/view/instructor_Manage.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -15,8 +17,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="662.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.Controller.InstructorContrpller">
-    <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
+<AnchorPane prefHeight="662.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom right, #e0e7ff, #ffffff);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ormfinalproject.controller.InstructorController">
+    <VBox alignment="TOP_CENTER" layoutX="18.4" prefHeight="622.0" prefWidth="912.0" spacing="20" style="-fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" VBox.vgrow="ALWAYS">
 
         <!-- Header -->
         <Label alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: linear-gradient(to right, #3b4cca, #6b7280); -fx-background-radius: 10; -fx-padding: 15;" text="Instructor Management">
@@ -27,8 +29,17 @@
         <Separator style="-fx-background-color: #6b7280;" HBox.hgrow="ALWAYS" />
 
         <!-- Input Form -->
-        <HBox alignment="CENTER" maxWidth="Infinity" spacing="30" stylesheets="@../css/Instructor.css">
-            <GridPane alignment="CENTER" hgap="15" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
+        <HBox alignment="CENTER" maxWidth="Infinity" prefHeight="229.0" prefWidth="850.0" spacing="30" stylesheets="@../css/Instructor.css">
+         <AnchorPane prefHeight="229.0" prefWidth="186.0">
+            <children>
+               <ImageView fitHeight="48.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../../../../../Downloads/back.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </AnchorPane>
+            <GridPane alignment="CENTER" hgap="15" prefHeight="229.0" prefWidth="390.0" style="-fx-padding: 20; -fx-background-color: #f9fafb; -fx-background-radius: 10; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0, 0, 2);" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30" />
                     <ColumnConstraints percentWidth="70" />
@@ -42,18 +53,18 @@
                 </rowConstraints>
 
                 <!-- Name -->
-                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                <Label text="Instructor ID:" GridPane.columnIndex="0" GridPane.rowIndex="0">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtName" promptText="Enter Full Name" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                <TextField fx:id="txtInstructorId" promptText="Enter Insrructor ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="0">
                     <tooltip><Tooltip text="Instructor's full name" /></tooltip>
                 </TextField>
 
                 <!-- Phone -->
-                <Label text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtPhone" promptText="Enter Phone Number" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <TextField fx:id="txtName" promptText="Enter Full Name" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <tooltip><Tooltip text="Instructor's contact number" /></tooltip>
                 </TextField>
 
@@ -66,10 +77,10 @@
                 </TextField>
 
                 <!-- Instructor ID -->
-                <Label text="Instructor ID:" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                <Label GridPane.columnIndex="0" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="14.0" /></font>
                 </Label>
-                <TextField fx:id="txtInstructorId" promptText="Enter Instructor ID" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <TextField fx:id="txtPhone" promptText="Enter Phone Number" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <tooltip><Tooltip text="Unique ID for the instructor" /></tooltip>
                 </TextField>
 
@@ -80,6 +91,11 @@
                 <TextField fx:id="txtAvailability" promptText="Enter Availability" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <tooltip><Tooltip text="Instructor's availability status" /></tooltip>
                 </TextField>
+            <Label layoutX="30.0" layoutY="33.0" text="Phone:" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
             </GridPane>
 
             <!-- Right Side Placeholder -->
@@ -110,12 +126,12 @@
         </HBox>
 
         <!-- Table -->
-        <TableView fx:id="tblPayments" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblInstructor" onMouseClicked="#tableClickOnAction" style="-fx-background-color: #ffffff; -fx-border-color: #e5e7eb; -fx-border-radius: 8; -fx-table-cell-border-color: transparent;" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="colName" minWidth="180" prefWidth="180" text="Name" />
-                <TableColumn fx:id="colPhone" minWidth="140" prefWidth="140" text="Phone" />
+                <TableColumn fx:id="colInstructorId" minWidth="180" prefWidth="180" text="Instructor ID" />
+                <TableColumn fx:id="colName" minWidth="140" prefWidth="140" text="Name" />
                 <TableColumn fx:id="colEmail" minWidth="180" prefWidth="180" text="Email" />
-                <TableColumn fx:id="colInstructorId" minWidth="120" prefWidth="120" text="Instructor ID" />
+                <TableColumn fx:id="colPhone" minWidth="120" prefWidth="120" text="Phone" />
                 <TableColumn fx:id="colAvailability" minWidth="120" prefWidth="120" text="Availability" />
             </columns>
             <columnResizePolicy>
